Sourcing build.properties to support better Dreamhost upload