@@ -215,6 +215,10 @@ jpackage {
     }
     windows {
         icon = "platform/windows/resources/icons/vZomeLogo.ico"
+
+        // These --add-exports seem to be required to get JOGL 2.4 to work with Java 17 on Windows
+        //  see:  https://forum.jogamp.org/JOGL-2-4-and-Java-17-report-td4041572.html
+        //  and:  https://github.com/jzy3d/jzy3d-api/issues/230#issuecomment-1004197519
         additionalParameters << "--java-options"
         additionalParameters <<     "--add-exports"
         additionalParameters << "--java-options"
@@ -229,9 +233,9 @@ jpackage {
         additionalParameters <<     "java.desktop/sun.java2d=ALL-UNNAMED"
     }
 
-    doLast {
-        println "appName is $appName"
-        println "appVersion is $appVersion"
-        println "macPackageName is $macPackageName"
-    }
+    // doLast {
+    //     println "appName is $appName"
+    //     println "appVersion is $appVersion"
+    //     println "macPackageName is $macPackageName"
+    // }
 }
